Maintain a list of running processes in registry - Add generic framework for instrumenting code
